Add more minor styling

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 :root {
     --color-primary: rgb(0, 174, 255);
     --color-secondary: rgb(255, 174, 0);
+    --color-shadow: grey;
     --section-padding: 8px;
     --section-margin: 8px;
     --border-radius-default: 8px;
@@ -10,6 +11,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+p {
+    color: rgb(90, 90, 90);
+    font-size: 12px;
 }
 
 body {
@@ -26,12 +32,26 @@ header {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
+    border-bottom: ridge;
+}
+
+header p {
+    color: black;
+    font-size: 1rem;
 }
 
 header form {
     justify-self: start;
     align-self: center;
     padding: var(--section-padding);
+    width: 300px;
+}
+
+#header-search {
+    background: rgb(236, 236, 236);
+    padding: 10px;
+    border: 0;
+    border-radius: var(--border-radius-default);
 }
 
 #account-container {
@@ -61,6 +81,7 @@ header form {
     border-radius: 32px;
     padding: 8px;
     font-size: 16px;
+    font-weight: bold;
     width: 100px;
     text-align: center;
 }
@@ -78,6 +99,11 @@ ul {
     list-style: none;
 }
 
+li {
+    margin-bottom: 30px;
+    margin-left: 16px;
+}
+
 #sidebar .logo,
 #sidebar-buttons,
 #sidebar-options {
@@ -90,7 +116,7 @@ ul {
     background: rgb(226, 226, 226);
 
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 3fr 1fr;
 }
 
 #projects {
@@ -99,15 +125,21 @@ ul {
 }
 
 #card-container {
+    margin-top: var(--section-margin);
     display: grid;
     gap: 20px;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
 
 .card {
-    padding: var(--section-padding);
+    padding: 16px 16px;
     border-radius: var(--border-radius-default);
     border-left: 0.5rem solid var(--color-secondary);
+
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    box-shadow: 2px 5px 5px var(--color-shadow);
 }
 
 #announcements {
@@ -115,15 +147,21 @@ ul {
 }
 
 #announcement-container {
+    margin-top: var(--section-margin);
     display: flex;
     flex-direction: column;
     gap: 8px;
     padding: var(--section-padding);
     border-radius: var(--border-radius-default);
+    box-shadow: 2px 5px 5px var(--color-shadow);
 }
 
 .announcement {
     padding: var(--section-padding);
+}
+
+.announcement:not(:last-child) {
+    border-bottom: thin solid rgb(90, 90, 90,.5);
 }
 
 #trending {
@@ -131,12 +169,15 @@ ul {
 }
 
 #trending-user-container {
+    margin-top: var(--section-margin);
     display: flex;
     flex-direction: column;
     /* align-items: center; */
     gap: 8px;
     padding: var(--section-padding);
     border-radius: var(--border-radius-default);
+    box-shadow: 2px 5px 5px var(--color-shadow);
+
 }
 
 #announcement-container,
