--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ img {
 body {
     font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     display: grid;
-    grid-template-columns: 1fr 4fr;
+    grid-template-columns: min(200px, 1fr) 4fr;
     grid-template-rows: 1fr 5fr;
 }
 
@@ -42,20 +42,37 @@ header {
 header p {
     color: black;
     font-size: 1rem;
+
 }
 
 header form {
-    justify-self: start;
+    justify-self: center;
     align-self: center;
     padding: var(--section-padding);
-    width: 300px;
+    /* width: clamp(200px, 100%, 400px); */
+    /* width: max(200px,100%); */
+    width: 100%;
 }
 
 #header-search {
     background: rgb(236, 236, 236);
-    padding: 10px;
+    padding: 15px;
     border: 0;
     border-radius: var(--border-radius-default);
+    width: 100%;
+}
+
+header form {
+    display: flex;
+}
+
+.searchButton {
+    border: none;
+    text-decoration: none;
+    background: none;
+    cursor: pointer;
+
+    margin-left: -30px;
 }
 
 #account-container {
@@ -88,6 +105,7 @@ header form {
     font-weight: bold;
     width: 100px;
     text-align: center;
+    cursor: pointer;
 }
 
 #sidebar {
