Add main avatar

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,12 @@ img {
     height: 1.5rem;
 }
 
+.avatar {
+    border-radius: 50%;
+    height: 3rem;
+    width: 3rem;
+}
+
 body {
     font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     display: grid;
@@ -88,6 +94,17 @@ header form {
     justify-self: start;
     align-self: center;
     padding: var(--section-padding);
+
+    display: grid;
+    grid-template-columns: auto 1fr;
+    grid-template-rows: auto auto;
+    column-gap: 16px;
+}
+
+#hello-container img {
+    grid-row: 1 / 3;
+    height: 4rem;
+    width: 4rem;
 }
 
 #header-main-buttons {
@@ -198,7 +215,7 @@ li {
     display: flex;
     flex-direction: column;
     gap: 8px;
-    padding: var(--section-padding);
+    padding: 16px;
     border-radius: var(--border-radius-default);
     box-shadow: 2px 5px 5px var(--color-shadow);
 }
