--- a/styles.css
+++ b/styles.css
@@ -244,6 +244,16 @@ li {
 
 }
 
+.user-container {
+    display: inline-grid;
+    grid-template-columns: auto 1fr;
+    column-gap: 16px;
+}
+
+.user-container img {
+    grid-row: 1 / 3;
+}
+
 #announcement-container,
 #trending-user-container,
 .card {
